<android.support.v4.view.ViewPager
    android:id="@+id/vp_list_item_event"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginTop="6dp"
    android:overScrollMode="never">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_list_item_event"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_list_item_event_icon_container"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp">

                    <ImageView
                        android:id="@+id/iv_list_item_event_icon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                         />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_list_item_event_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:maxLength="22"
                        android:maxLines="1"
                        android:textColor="@color/text_title"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_list_item_event_time_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:textColor="@color/text_subtitle"/>

                <TextView
                    android:id="@+id/tv_list_item_event_attendees"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:textColor="@color/text_subtitle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:gravity="left"
                >

                <TextView
                    android:id="@+id/tv_list_item_event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/text_subtitle"/>

                <TextView
                    android:id="@+id/tv_list_item_event_rsvp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="12sp"
                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/secondaryContentFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical">

            <ImageButton
                android:id="@+id/btn_list_item_event_going"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_btn_rsvp_going"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rsvp_yes"
                android:textSize="14sp"
                android:textColor="@color/text_subtitle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            >

            <ImageButton
                android:id="@+id/btn_list_item_event_maybe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_btn_rsvp_maybe"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rsvp_maybe"
                android:textSize="14sp"
                android:textColor="@color/text_subtitle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_list_item_event_not_going"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_btn_rsvp_no"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rsvp_no"
                android:textSize="14sp"
                android:textColor="@color/text_subtitle"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.view.ViewPager>
